--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="swiper-slide bg">
                 <div class="que3">
                     <img src="images/3_car.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="3s" swiper-animate-delay="0">
-                    <span class="ani" alt="" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0.1s">3</span>
+                    <span class="ani" alt="" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">3</span>
                 </div>
                 <div class="answerbg">
                     <div class="answer answer3 one" id="way">
@@ -147,7 +147,7 @@
             <div class="swiper-slide bg">
                 <div class="que5">
                     <img src="images/pill.png" alt="" class="ani" swiper-animate-effect="bounceInLeft" swiper-animate-duration="3s" swiper-animate-delay="0">
-                    <span class="ani" alt="" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0.1s">5</span>
+                    <span class="ani" alt="" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">5</span>
                 </div>
                 <div class="answerbg">
                     <div class="answer answer5 two" id="qudao" style="margin-top: 1.2rem">
@@ -175,7 +175,7 @@
                 <div class="que6">
                     <img src="images/6hongbao.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">
                     <img src="images/6chaoren.png" alt="" class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="0.3s">
-                    <span class="ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0.1s">6</span>
+                    <span class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">6</span>
                 </div>
                 <div class="answerbg">
                     <div class="answer answer6 one" id="yusuan">
