--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>装X一下</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="css/common.css">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jQuery-2.1.4.min.js"></script>
@@ -69,11 +69,11 @@
             </div>
             <!-- 第二页 -->
             <div class="swiper-slide bg">
-                <div class="que que2"><img src="images/xingbie1.png" alt=""></div>
-                <div class="p">
-                    <img src="images/q2.png" alt="">
+                <div class="que que2">
+                    <img src="images/2_yun.png" alt="" class="ani" swiper-animate-effect="pulse" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s">
                     <span class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">2</span>
                 </div>
+                
                 <div class="answerbg">
                     <div class="answer answer2 one" id="sex">
                         <div class="boy">
@@ -173,12 +173,12 @@
             <!-- 第六页 -->
             <div class="swiper-slide bg">
                 <div class="que6">
-                    <img src="images/6hongbao.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">
-                    <img src="images/6chaoren.png" alt="" class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="0.3s">
+                    <img src="images/6_hongbao.png" alt="" class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">
+                    <img src="images/6_chaoren.png" alt="" class="ani" swiper-animate-effect="bounceInUp" swiper-animate-duration="2s" swiper-animate-delay="0.3s">
                     <span class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">6</span>
                 </div>
                 <div class="answerbg">
-                    <div class="answer answer6 one" id="yusuan">
+                    <div class="answer answer6 one" id="yusuan" style="margin-top: 1.2rem">
                         <button>A&nbsp;&nbsp;&nbsp;<span>1万以下</span>
                             <div></div>
                         </button>
@@ -189,6 +189,9 @@
                             <div></div>
                         </button>
                         <button>D&nbsp;&nbsp;&nbsp;<span>5~10万</span>
+                            <div></div>
+                        </button>
+                        <button>D&nbsp;&nbsp;&nbsp;<span>10万以上</span>
                             <div></div>
                         </button>
                     </div>
@@ -249,7 +252,7 @@
             </div>
             <!-- 第九页 -->
             <div class="swiper-slide bg" style="background: url(images/9bg.png);">
-                <img src="images/9huoqu.png" alt="" class="huoqu ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0">
+                <img src="images/9_huoqu.png" alt="" class="huoqu ani" swiper-animate-effect="bounceInDown" swiper-animate-duration="1s" swiper-animate-delay="0">
                 <div class="que9"><span class="ani" swiper-animate-effect="swing" swiper-animate-duration="1s" swiper-animate-delay="0.1s">9</span></div>
                 <div class="answerbg">
                     <div class="answer answer9 one" id="name">
@@ -261,7 +264,9 @@
             </div>
             <!-- 第十页 -->
             <div class="swiper-slide re">
-                <!-- <img src="images/result_lv.png" alt=""> -->
+               <!--  <img src="images/8_img.png" alt="" id="starImg" style="display: none">
+                <canvas id="main" width=223 height=517 style="border:1px solid #d3d3d3;"></canvas> -->
+                <img src="images/result_lv.png" alt="">
                 <span class="result"></span>
                 <button>保存图片</button>
             </div>
