--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             starImg.onload = function () {
                 mainCtx.drawImage(starImg, 0, 0, 750, 1206);
                 mainCtx.font = "0.24rem qianming";
-                mainCtx.fillStyle = "black";
-                mainCtx.fillText('哈哈', x, y);
+                mainCtx.fillStyle = "red";
+                mainCtx.fillText('哈哈',580, 1130);
             };
             $('#saveImage').click(function () {
                 var myCanvas = document.getElementById("canvas");
